--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-This is the first time for me in the Marvel Universe
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    This is the first time for me in the marvel universe
+</body>
+</html>
